# Providence

./: Main.py  README.md
cpp/: CMakeLists.txt
cpp/src/: Main.cpp  copy.cpp
cpp/src/cameramanager/: CameraManager.cpp  CameraManager.hpp
cpp/src/include/: DetectionManager.hpp
cpp/src/include/cameramanager/: CameraManager.cpp  CameraManager.hpp
cpp/src/include/detectionmanager/: DetectionManager.cpp  DetectionManager.hpp
cpp/src/systemmanager/: SystemManager.hpp
cpp/webpage/: CMakeLists.txt  server.cpp
cpp/webpage/public/: index.html
cpp/webpage/public/libs/: orbit.min.js
cpp/webpage/public/libs/cpp/crow/: http_server.h  socket_adaptors.h
cpp/webpage/public/src/: main.js
cpp/webpage/src/include/cameramanager/: CameraManager.cpp  CameraManager.hpp
cpp/webpage/src/include/detectionmanager/: DetectionManager.cpp  DetectionManager.hpp
cpp/webpage/src/include/servermanager/: ServerManager.cpp  ServerManager.hpp
cpp/webpage/src/include/superstructure/: SuperStructure.cpp  SuperStructure.hpp
cpp/webpage/src/include/systemmanager/: SystemManager.cpp  SystemManager.hpp
cpp/webpage/src/include/util/: Utility.hpp
cpp/webpage/src/superstructure/: SuperStructure.cpp  SuperStructure.hpp
python/: Main.py
python/misc/: Main.py  webserver.py
python/misc/src/: CameraManager.py  Constants.py
python/src/: test.py
src/: DetectionManager.py  Main.py  Utility.py
src/util/: DetectionManager.py  Utility.py
webpage/: CMakeLists.txt  server.cpp
webpage/archive/: index.html  package-lock.json  package.json
webpage/templates/: index.html
(+5 files in other folders)
